methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:10: error: unclosed character literal
  var c:Str='' 
            ^MethodsPicture:10: error: illegal start of simple expression
  var c:Str='' 
            ^